api-resources/default/ac7ed64f-f048-44dc-a3cc-6f5ac8c9c4ca/1/default_ac7ed64f-f048-44dc-a3cc-6f5ac8c9c4ca_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - petstore.com
  parentRefs:
  - name: external
    namespace: gateway-system
  rules:
  - backendRefs:
    - name: petstore
      namespace: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /cat
  - backendRefs:
    - name: petstore
      namespace: petstore
      port: 80
    matches:
    - method: POST
      path:
        type: Exact
        value: /cat
  - backendRefs:
    - name: petstore
      namespace: petstore
      port: 80
    matches:
    - method: GET
      path:
        type: Exact
        value: /dog
  - backendRefs:
    - name: petstore
      namespace: petstore
      port: 80
    matches:
    - method: POST
      path:
        type: Exact
        value: /dog
